Figured out the first part of the header for index.html style.css

--- a/index.html
+++ b/index.html
@@ -7,21 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header">
-    <h1>My Portfolio</h1>
-    <p>This website has some subtext that goes here 
-    under the main title it's smaller font and color is lower contrast.</p>
-
-    <button>Sign up</button>
-    <img src="img/computer.jpg" alt="Person using a laptop">
-    <h2>Header Logo</h2>
-
+    <div class="container-1">
+    <header class="header">
+    <div class="logo">
+  
+    <h1>Header Logo</h1>
+ </div>
+ <nav class="navigation">
     <ul>
      <li> header link one</li>
      <li> header link two</li>
      <li> header link three</li>
     </ul>
+</nav>
+    </header>
+    <div class="info">
+ <div class="img">
+ <img src="img/computer.jpg" style="height: 300px;
+width: 300px;" alt="This is an image of someone using a laptop"> 
 </div>
+
+<div class="awesome">This Website is awesome
+<p style="font-size: 36px;">This is a website that I am learning to make and i hate it so much 
+    its so annoying</p>
+    
+<button style="width: fit-content; background-color: blue; color: antiquewhite;">Sign up</button>
+</p>
+</div>
+</div>
+</div>
+</body>
 
 </body>
 </html>
