Next section with images and text have been added index.html style.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
     <div class="logo">
   
-    <h1>Header Logo</h1>
+    <h1 style="font-size: 24px;">Header Logo</h1>
  </div>
  <nav class="navigation">
     <ul>
@@ -22,7 +22,7 @@
 </nav>
     </header>
     <div class="info">
- <div class="img">
+ <div class="img1">
  <img src="img/computer.jpg" style="height: 300px;
 width: 300px;" alt="This is an image of someone using a laptop"> 
 </div>
@@ -31,11 +31,29 @@ width: 300px;" alt="This is an image of someone using a laptop">
 <p style="font-size: 36px;">This is a website that I am learning to make and i hate it so much 
     its so annoying</p>
     
-<button style="width: fit-content; background-color: blue; color: antiquewhite;">Sign up</button>
+<button style="width: fit-content; background-color: blue; color: antiquewhite; font-size: 20px;">Sign up</button>
 </p>
 </div>
 </div>
 </div>
+
+
+<h2>Some Random Information</h2>
+<div class="info">
+<div class="img2">
+    <ul>
+<li><img src="img/computer.jpg" style="height: 300px;
+    width: 300px;" alt="This is an image of someone using a laptop"> <figcaption>This is text under an image</figcaption> </li>
+    <li><img src="img/computer.jpg" style="height: 300px;
+        width: 300px;" alt="This is an image of someone using a laptop"><figcaption>This is text under an image</figcaption> </li>
+        <li><img src="img/computer.jpg" style="height: 300px;
+            width: 300px;" alt="This is an image of someone using a laptop"><figcaption>This is text under an image</figcaption> </li>
+            <li><img src="img/computer.jpg" style="height: 300px;
+                width: 300px;" alt="This is an image of someone using a laptop"><figcaption>This is text under an image</figcaption> </li>
+
+</div>
+
+
 </body>
 
 </body>
