Finished product index.html style.css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ width: 300px;" alt="This is an image of someone using a laptop">
 </div>
 
 <div class="awesome">This Website is awesome
-<p style="font-size: 36px;">This is a website that I am learning to make and i hate it so much 
+<p>This is a website that I am learning to make and i hate it so much 
     its so annoying</p>
     
 <button style="width: fit-content; background-color: blue; color: antiquewhite; font-size: 20px;">Sign up</button>
@@ -50,11 +50,26 @@ width: 300px;" alt="This is an image of someone using a laptop">
             width: 300px;" alt="This is an image of someone using a laptop"><figcaption>This is text under an image</figcaption> </li>
             <li><img src="img/computer.jpg" style="height: 300px;
                 width: 300px;" alt="This is an image of someone using a laptop"><figcaption>This is text under an image</figcaption> </li>
-
+</div>
+</div>
+<div class="container-2"
+    <p style="font-style: italic; text-align: center;"> "This is an isnpiring quote. Oh so inspiring I love 
+    a good quotey quote. Woohoo yaya yayya ayya I love 
+    everything I am great and cool and great and cool" -Mallory</p>
+</p>
+</div>
+<div class="container-3">
+    <div class="last">
+<div style="font-size: 48px;">Call to action, its time!</div>
+<p>sign up with our product by clicking the button right there!</p>
+</div>
+<div class="button-2">
+<button style="padding: 20px;">Sign up</button>
+</div>
 </div>
 
-
 </body>
+
 
 </body>
 </html>
